testsuite/tests/rep-poly/RepPolyLeftSection2.stderr

RepPolyLeftSection2.hs:14:11: error:
    • The argument ‘undefined’ of ‘f’
      does not have a fixed runtime representation.
      Its type is:
        a :: TYPE r
    • In the expression: undefined `f`
      In an equation for ‘test1’: test1 = (undefined `f`)
